# qlite

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  README.md  SQS_FEATURES_IMPLEMENTATION_PLAN.md
.claude/: settings.local.json
.github/workflows/: release-plz.yml
scripts/: comprehensive_aws_cli_test.sh  detailed_aws_cli_test.sh  final_validation_test.sh  issue_focused_test.sh  production_readiness_test.sh  test_fixes.sh  test_max_receive_count.sh  test_simple.sh  test_sqs_compatible.sh  test_with_awscli.sh
src/: config.rs  database.rs  http_server.rs  lib.rs  main.rs  message.rs  queue_service.rs  retention.rs  sqs_types.rs  ui.rs
templates/: dashboard.html  messages.html
tests/: README.md  simple_integration_test.rs  working_tests.rs
