[package]
name = "qlite"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-rusqlite = "0.5"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
md5 = "0.7"
urlencoding = "2.1"
askama = "0.12"
