[package]
name = "qlite"
version = "0.1.0"
edition = "2024"
description = "A sqs drop in replacement for local or cicd development"
license = "MIT"

[lib]
name = "qlite"
path = "src/lib.rs"

[[bin]]
name = "qlite"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-rusqlite = "0.5"
rusqlite = "0.31"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde_json = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
md5 = "0.7"
urlencoding = "2.1"
askama = "0.12"
toml = "0.8"
tokio-cron-scheduler = "0.13"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
httpmock = "0.7"
serde_json = "1.0"

[profile.release]
lto = true
strip = true
codegen-units = 3

[profile.dev]
codegen-units = 1

[profile.test]
codegen-units = 1
